Add GET alignments/{id} api
