# app/api/api/swagger/swagger.yaml
@@ -16,7 +16,7 @@ paths:
     post:
       tags : [ Alignment ]
       description: Request a new asynchronous alignment
-      operationId: alignRequest
+      operationId: requestAlignment
       parameters:
         - name: request
           in: body
@@ -29,7 +29,27 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/AlignTask"
-        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /alignments/{id}:
+    x-swagger-router-controller: alignments
+    get:
+      tags : [ Alignment ]
+      description: Get durable result of completed alignment
+      operationId: getAlignment
+      parameters:
+        - name: id
+          in: path
+          description: Alignment id
+          required: true
+          type: number
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/AlignResponse"
         default:
           description: Error
           schema:
@@ -38,7 +58,7 @@ paths:
     x-swagger-router-controller: status
     get:
       tags : [ Alignment ]
-      description: Get status of an alignment
+      description: Get status of an ongoing or receent alignment
       operationId: requestStatus
       parameters:
         - name: taskId
@@ -51,7 +71,6 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/AlignStatus"
-        # responses may fall through to errors
         default:
           description: Error
           schema:
@@ -67,7 +86,6 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/HealthResponse"
-# complex objects have schema definitions
 definitions:
   AlignRequest:
     required:
@@ -93,6 +111,16 @@ definitions:
         type: string
       message:
         type: string
+  AlignResponse:
+    properties:
+      sequence:
+        type: string
+      found:
+        type: boolean
+      proteinName:
+        type: string
+      proteinPosition:
+        type: number
   ErrorResponse:
     required:
       - message
